...
                .foregroundColor(Color.accentColor)
                
                Button(action: {
                    print("cart button tapped")
                    addPizaToCart()
                }) {
                    Text("Add To Cart")
                        .frame(minWidth: 0, maxWidth: .infinity)
                        .font(.system(size: 18))
                        .padding()
                        .foregroundColor(.white)
                        .overlay(
                            RoundedRectangle(cornerRadius: 20)
...
